tool: add errcheck
Introduce `make check-err` rule and fix doc renaming `make code-check`
to `make check-code`.

--- a/.github/actions/build-dependencies/action.yaml
+++ b/.github/actions/build-dependencies/action.yaml
@@ -58,6 +58,11 @@ runs:
         GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest
         sudo cp $HOME/go/bin/goimports-reviser /usr/bin/
       shell: bash
+    - name: Install errcheck
+      run: |
+        GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest
+        sudo cp $HOME/go/bin/errcheck /usr/bin/
+      shell: bash
     - name: Install docker
       run: |
         sudo apt-get install --yes ca-certificates curl gnupg lsb-release
