--- a/builder/Dockerfile.ubuntu-tracee-make
+++ b/builder/Dockerfile.ubuntu-tracee-make
@@ -69,7 +69,9 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     update-alternatives --install /usr/bin/go go /usr/local/go/bin/go 1 && \
     update-alternatives --install /usr/bin/gofmt gofmt /usr/local/go/bin/gofmt 1 && \
     GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/incu6us/goimports-reviser/v3@latest && \
-    sudo cp $HOME/go/bin/goimports-reviser /usr/bin/
+    sudo cp $HOME/go/bin/goimports-reviser /usr/bin/ && \
+    GOROOT=/usr/local/go GOPATH=$HOME/go go install github.com/kisielk/errcheck@latest && \
+    sudo cp $HOME/go/bin/errcheck /usr/bin/
 
 USER tracee
 ENV HOME /home/tracee
